[package]
name = "kube-client-ext"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://gitlab.com/imp/kube-client-ext-rs"
description = "Extension trait (helpers) for kube::Client"
rust-version = "1.83.0"


[dependencies]
async-trait = "0.1"
k8s-openapi = { version = "0.26", features = [] }
k8s-openapi-ext = "0.26.0"
kube-client = { version = "2.0", default-features = false, features = ["client"] }


[dev-dependencies.k8s-openapi]
version = "0.26"
features = ["latest"]


[features]
default = ["k8s-openapi/latest"]
pedantic = []


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
